@@ -4,6 +4,7 @@ ikiwiki (2.64) UNRELEASED; urgency=low
     specified.
   * ddate: Stop clobbering timeformat when not enabled.
   * progress: New plugin to generate progress bars (willu)
+  * Add allow_symlinks_before_srcdir to config so websetup doesn't eat it.
 
  -- Joey Hess <joeyh@debian.org>  Mon, 08 Sep 2008 19:21:20 -0400
 
